--- a/css/style.css
+++ b/css/style.css
@@ -84,11 +84,6 @@ ul li a:hover {
     background-color: var(--extra-light)
 }
 
-.section__container1{
-    min-height: 300px;
-    margin: auto;
-    padding: 4rem
-}
 
 .image1{
     display: flex;
@@ -103,7 +98,6 @@ ul li a:hover {
     border-width: 10px;
     height: 400px;
 }
-
 .content{
   display: flex;
   flex-direction: column;
@@ -177,41 +171,10 @@ ul li a:hover {
         background-size: cover;
         background-attachment: fixed; 
     }
-
-    .description1{
-        border-radius: 5px;
-        border: solid;
-        background-color: #e7ecee;
-        width: 400px;  
-    }
-
-
 .education{
     background-color: lightblue;
     padding: 4rem;
 }
-.section__container3{
-    min-height: 300px;
-    margin: auto;
-    padding: 4rem;
-    display: flex;
-    justify-content: space-around; 
-    
-}
-.image2{
-    display: flex;
-    justify-content: end;
-}
-
-.image2 img{
-    width: 400px;
-    border-radius: 50px;
-    border-color: #153448;
-    border: solid;
-    border-width: 10px;
-    height: 400px;
-}
-
 .experience{
     background-color: #d1c8c8;
     padding: 4rem;
@@ -219,57 +182,13 @@ ul li a:hover {
     justify-content: space-evenly;
 }
 
-.section__container4{
-    min-height: 300px;
-    margin: auto;
-    padding: 4rem;
-    display: flex;
-    flex-flow: row wrap;
-    gap: 10px;
-    justify-content: space-around; 
-    
-}
-.description2{
-    border-radius: 10px;
-    border: solid;
-    background-color: #8a9da4;
-    width: 500px;
-}
-.description3{
-    border-radius: 10px;
-    border: solid;
-    background-color: #8a9da4;
-    width: 500px;
-}
 
-.image3{
-    display: flex;
-    justify-content: end;
-}
 
-.image3 img{
-    width: 400px;
-    border-radius: 50px;
-    border-color: #153448;
-    border: solid;
-    border-width: 10px;
-    height: 400px;
-}
 .projects{
     background-color: #689bbd;
     padding: 4rem;
     display: flex;
     justify-content: space-evenly;
-}
-.section__container5{
-    min-height: 300px;
-    margin: auto;
-    padding: 4rem;
-    display: flex;
-    flex-flow: row wrap;
-    gap: 10px;
-    justify-content: space-around; 
-     
 }
 .skills{
     background-color: #c7ddeb;
@@ -277,18 +196,9 @@ ul li a:hover {
     display: flex;
     justify-content: space-evenly;
 }
-.section__container6{
-    min-height: 300px;
-    margin: auto;
+.reachme{
+    background-color: #2c698f;
     padding: 4rem;
     display: flex;
-    flex-flow: row wrap;
-    gap: 10px;
-    justify-content: space-around; 
-}
-.description4{
-    border-radius: 10px;
-    border: solid;
-    background-color: #89b8c9;
-    width: 500px;
+    justify-content: space-evenly;
 }
